--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
+    "moment": "^2.29.1",
     "multiselect-react-dropdown": "^1.6.1",
     "node-sass": "^4.14.1",
     "popper": "^1.0.1",
