--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^6.9.2",
     "react-icons": "^3.11.0",
     "react-number-format": "^4.4.1",
+    "react-numeric-input": "^2.2.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
