--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "npm": ">=6.14.6"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
