--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.14",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.12",
     "pg": "^8.3.0",
