--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "moment": "^2.29.1",
@@ -19,6 +20,7 @@
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-multiselect": "^2.4.1",
     "react-bootstrap-sweetalert": "^5.2.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.22",
     "react-hook-form": "^6.9.2",
@@ -32,7 +34,8 @@
     "react-stars": "^2.2.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
