trying-to-implement-twitter Done!

--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
+    "login-with-twitter": "^1.2.3",
     "moment": "^2.29.1",
     "multiselect-react-dropdown": "^1.6.1",
     "node-sass": "^4.14.1",
+    "passport-twitter": "^1.0.4",
     "paypal-checkout": "^4.0.318",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
