--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.4.14",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.12",
+    "passport-twitter": "^1.0.4",
     "pg": "^8.3.0",
     "sequelize": "^6.3.4"
   },
