--- a/client/package.json
+++ b/client/package.json
@@ -3,23 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "moment": "^2.29.1",
     "multiselect-react-dropdown": "^1.6.1",
     "node-sass": "^4.14.1",
+    "paypal-checkout": "^4.0.318",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "query-string": "^6.13.5",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-multiselect": "^2.4.1",
     "react-bootstrap-sweetalert": "^5.2.0",
-    "react-dom": "^16.13.1",
+    "react-cookie": "^4.0.3",
+    "react-dom": "^16.14.0",
     "react-google-login": "^5.1.22",
     "react-hook-form": "^6.9.2",
     "react-icons": "^3.11.0",
@@ -30,9 +34,11 @@
     "react-scripts": "^3.4.4",
     "react-social-login-buttons": "^3.1.0",
     "react-stars": "^2.2.5",
+    "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
