--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "npm": ">=6.14.6"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -26,6 +27,7 @@
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.14",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.12",
     "pg": "^8.3.0",
